--- a/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
+++ b/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
@@ -105,7 +105,7 @@
                 <div class="row mb-3">
                     <label for="eng" class="col-sm-2 col-form-label">{{ translationService.getLanguageName('en') }}</label>
                     <div class="col-sm-10">
-                      <textarea class="form-control" id="eng" formControlName="eng"></textarea>
+                      <textarea class="form-control" id="en" formControlName="en"></textarea>
                     </div>
                 </div>
                 <div class="row mb-3">
@@ -195,13 +195,13 @@
                         <input 
                             type="text" 
                             form="descriptions" 
-                            requestId = "eng" 
+                            requestId = "en" 
                             formId = "descriptions[0]url" 
                             class="form-control" 
-                            id="eng" 
-                            name="eng" 
-                            id="eng"  
-                            formControlName="eng"
+                            id="en" 
+                            name="en" 
+                            id="en"  
+                            formControlName="en"
                             required
                         >
                         <div class="invalid-feedback" formFeedback = "descriptions[0]url"></div>
