fix build issue

--- a/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
+++ b/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
@@ -1,16 +1,42 @@
 <div class="modal fade" id="editDescriptions" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-      <form class="form" (ngSubmit)="onSubmit()" #descriptionsForm="ngForm" id="descriptionsForm">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">{{translationService.translate('edit')}} : {{ translationService.translate('descriptions') }}</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">{{translationService.translate('edit')}} : {{ translationService.translate('descriptions') }}</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+
+      <div class="modal-body">
+        <form class="form" (ngSubmit)="onSubmit()" #descriptionsForm="ngForm" id="descriptionsForm">
+          <div *ngFor="let language of languagesForm">
+            <div *ngIf="language.active">
+              <div class="row descriptions-item">
+
+                <div class="col-2">
+                  <label for="{{language.key}}">{{language.key | uppercase}}</label>
+                </div>
+
+                <div class="col-10">
+                  <textarea 
+                    rows="10"
+                    class="form-control" 
+                    type="text" 
+                    id="{{language.key}}" 
+                    [(ngModel)]="language.value" 
+                    name="{{language.key}}"
+                  >
+                  </textarea>
+                </div>
+
+              </div>
+            </div>
           </div>
 
-          <div class="modal-body">
+          <div *ngIf="!allLanguage" (click) = "showAllLanguage()"> show more language </div>
 
+          <div *ngIf="allLanguage">
             <div *ngFor="let language of languagesForm">
-              <div *ngIf="language.active">
+              <div *ngIf="!language.active">
                 <div class="row descriptions-item">
 
                   <div class="col-2">
@@ -19,6 +45,7 @@
 
                   <div class="col-10">
                     <textarea 
+                      rows="10"
                       class="form-control" 
                       type="text" 
                       id="{{language.key}}" 
@@ -27,45 +54,20 @@
                     >
                     </textarea>
                   </div>
-
+                  
                 </div>
               </div>
             </div>
-
-            <div *ngIf="!allLanguage" (click) = "showAllLanguage()"> show more language </div>
-
-            <div *ngIf="allLanguage">
-              <div *ngFor="let language of languagesForm">
-                <div *ngIf="!language.active">
-                  <div class="row descriptions-item">
-
-                    <div class="col-2">
-                      <label for="{{language.key}}">{{language.key | uppercase}}</label>
-                    </div>
-
-                    <div class="col-10">
-                      <textarea 
-                        class="form-control" 
-                        type="text" 
-                        id="{{language.key}}" 
-                        [(ngModel)]="language.value" 
-                        name="{{language.key}}"
-                      >
-                      </textarea>
-                    </div>
-                    
-                  </div>
-                </div>
-              </div>
-            </div>
-
           </div>
 
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-primary">Save changes</button>
           </div>
-        </div>
-    </form>
-    </div>
+          
+        </form>
+        
+      </div>
+
+  </div>
 </div>
