--- a/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
+++ b/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
@@ -1,18 +1,19 @@
-<div class="modal fade" id="editDescriptions" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="editDescriptions" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">{{translationService.translate('edit')}} : {{ translationService.translate('descriptions') }}</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
+    <form class="form" (ngSubmit)="onSubmit()" #descriptionsForm="ngForm" id="descriptionsForm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">{{translationService.translate('edit')}} : {{ translationService.translate('descriptions') }}</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
 
-      <div class="modal-body">
-        <form class="form" (ngSubmit)="onSubmit()" #descriptionsForm="ngForm" id="descriptionsForm">
+        <div class="modal-body">
           <div *ngFor="let language of languagesForm">
             <div *ngIf="language.active">
               <div class="row descriptions-item">
+
                 <div class="col-2">
-                  <label for="{{language.key}}">{{ translationService.getLanguageName(language.key) }}</label>
+                  <label for="{{language.key}}"> {{ translationService.getLanguageName(language.key) }} </label>
                 </div>
 
                 <div class="col-10">
@@ -39,7 +40,7 @@
                 <div class="row descriptions-item">
 
                   <div class="col-2">
-                    <label for="{{language.key}}">{{ translationService.getLanguageName(language.key) }}</label>
+                    <label for="{{language.key}}"> {{ translationService.getLanguageName(language.key) }} </label>
                   </div>
 
                   <div class="col-10">
@@ -57,16 +58,13 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Save changes</button>
-          </div>
-          
-        </form>
-        
+          </div>            
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Save changes</button>
+        </div>
       </div>
-
+  </form>
   </div>
 </div>
