Fix build issue

--- a/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
+++ b/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
@@ -1,3 +1,5 @@
+<i class="fa-solid fa-pen-to-square" data-bs-toggle="modal" data-bs-target="#editDescriptions"></i>
+
 <div class="modal fade" id="editDescriptions" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl">
     <form class="form" (ngSubmit)="onSubmit()" #descriptionsForm="ngForm" id="descriptionsForm">
