--- a/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-general-information/edit-publisher-general-information.component.html
+++ b/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-general-information/edit-publisher-general-information.component.html
@@ -1,3 +1,5 @@
+<i class="fa-solid fa-pen-to-square" data-bs-toggle="modal" data-bs-target="#editGeneralInformation"></i>
+
 <div class="modal fade" id="editGeneralInformation" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
       <form class="form" (ngSubmit)="onSubmit()" #generalInformationForm="ngForm" id="generalInformationForm">
