--- a/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
+++ b/client/src/app/components/sections/publishers/add-publishers/add-publishers.component.html
@@ -154,7 +154,7 @@
                     <div class="col-8">
                         <input 
                             type="text" 
-                            form="generalInformation" 
+                            form="generalInformationScraperForm" 
                             requestId = "url" 
                             formId = "url" 
                             class="form-control" 
