--- a/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
+++ b/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
@@ -1,11 +1,11 @@
 <i class="fa-solid fa-pen-to-square" data-bs-toggle="modal" data-bs-target="#editDescriptions"></i>
 
-<div class="modal fade" id="editDescriptions" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="editDescriptions" tabindex="-1" aria-labelledby="editDescriptionsLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl">
     <form class="form" (ngSubmit)="onSubmit()" #descriptionsForm="ngForm" id="descriptionsForm">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">{{translationService.translate('edit')}} : {{ translationService.translate('descriptions') }}</h1>
+          <h1 class="modal-title fs-5" id="editDescriptionsLabel">{{translationService.translate('edit')}} : {{ translationService.translate('descriptions') }}</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
 
