--- a/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
+++ b/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.html
@@ -10,37 +10,11 @@
         </div>
 
         <div class="modal-body">
-          <div *ngFor="let language of languagesForm">
-            <div *ngIf="language.active">
-              <div class="row descriptions-item">
 
-                <div class="col-2">
-                  <label for="{{language.key}}"> {{ translationService.getLanguageName(language.key) }} </label>
-                </div>
-
-                <div class="col-10">
-                  <textarea 
-                    rows="10"
-                    class="form-control" 
-                    type="text" 
-                    id="{{language.key}}" 
-                    [(ngModel)]="language.value" 
-                    name="{{language.key}}"
-                  >
-                  </textarea>
-                </div>
-
-              </div>
-            </div>
-          </div>
-
-          <div *ngIf="!allLanguage" (click) = "showAllLanguage()"> show more language </div>
-
-          <div *ngIf="allLanguage">
+          <div *ngIf = "mode == 'form'">
             <div *ngFor="let language of languagesForm">
-              <div *ngIf="!language.active">
+              <div *ngIf="language.active">
                 <div class="row descriptions-item">
-
                   <div class="col-2">
                     <label for="{{language.key}}"> {{ translationService.getLanguageName(language.key) }} </label>
                   </div>
@@ -56,17 +30,68 @@
                     >
                     </textarea>
                   </div>
-                  
+                </div>  
+              </div>
+            </div> 
+
+            <div *ngIf="!allLanguage" (click) = "showAllLanguage()"> show more language </div>
+
+            <div *ngIf="allLanguage">
+              <div *ngFor="let language of languagesForm">
+                <div *ngIf="!language.active">
+                  <div class="row descriptions-item">
+
+                    <div class="col-2">
+                      <label for="{{language.key}}"> {{ translationService.getLanguageName(language.key) }} </label>
+                    </div>
+
+                    <div class="col-10">
+                      <textarea 
+                        rows="10"
+                        class="form-control" 
+                        type="text" 
+                        id="{{language.key}}" 
+                        [(ngModel)]="language.value" 
+                        name="{{language.key}}"
+                      >
+                      </textarea>
+                    </div>
+                    
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>            
-        </div>
+            </div>  
+          </div>
+
+          <div *ngIf = "mode == 'scraper'">
+            <div *ngFor="let scraperUrl of languagesScraper">
+              <div class="row languages">
+
+                <div class="col-4">
+                  <label for="eng" class="col-sm-2 col-form-label">{{ translationService.getLanguageName(scraperUrl.key) }}</label>
+                </div>
+
+                <div class="col-8">
+                  <input 
+                    type="text" 
+                    requestId = "fr" 
+                    class="form-control item" 
+                    id="{{scraperUrl.key}}"  
+                    [(ngModel)]="scraperUrl.value" 
+                    name="{{scraperUrl.key}}"
+                    required
+                  >
+                  </div>
+
+                </div>
+              </div>
+            </div> 
+          </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button type="submit" class="btn btn-primary">Save changes</button>
         </div>
       </div>
-  </form>
+    </form>
   </div>
 </div>
