--- a/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.scss
+++ b/client/src/app/components/sections/publishers/edit-publisher/edit-publisher-descriptions/edit-publisher-descriptions.component.scss
@@ -1,3 +1,11 @@
 .descriptions-item{
     margin-top: 10px;
 }
+.languages{
+    padding:10px;
+    margin: 10px;
+
+    .item{
+        width: 80%;
+    }
+}
