Add active language

--- a/client/src/app/components/sections/auth/footer/footer.component.html
+++ b/client/src/app/components/sections/auth/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer">
-  <img src="../../../../../assets/flags/pl.png" class="flag" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  <img src="{{getCorrectLang()}}" class="flag" data-bs-toggle="modal" data-bs-target="#exampleModal">
 </div>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
